fix(core/content-header): correct sub size gap to gap-base

--- a/packages/core/src/content-header/_content-header-styles.scss
+++ b/packages/core/src/content-header/_content-header-styles.scss
@@ -56,6 +56,8 @@
   }
 
   &--sub {
+    gap: spacing.semantic-variable(gap, base);
+
     .#{$prefix}__action-area {
       gap: spacing.semantic-variable(gap, base);
     }
